# wavebrush

./: .envrc  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: colorramp.rs  error.rs  lib.rs  sample.rs  shredder.rs  spectrogram.rs  stft.rs  util.rs
src/: bs.rs  colorramp.rs  control.rs  edit.rs  main.rs  shredder.rs  spectrogram.rs  stft.rs  ui.rs  util.rs
voco/: Cargo.toml
voco/src/: main.rs
wavebrush/: Cargo.toml
wavebrush/src/: edit.rs  main.rs  sample.rs  ui.rs
