[package]
name = "wavebrush"
version = "0.1.0"
authors = ["Miles Steele <miles@milessteele.com>"]
edition = "2018"

[dependencies]
rustfft = "3.0.0"
hound = "3.4.0"
image = "0.21.0"
glium = { version = "0.23.0", default-features = true }
imgui = "0.0.22"
imgui-glium-renderer = "0.0.22"
imgui-winit-support = "0.0.22"
failure = "0.1.5"
crossbeam = "0.7.1"
rodio = "0.8.1"
lib = { path = "./lib" }
num = "0.2.0"
