[package]
name = "voco"
version = "0.1.0"
authors = ["Miles Steele <miles@milessteele.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.10.0"
failure = "0.1.5"
rodio = "0.8.1"

lib = { path = "../lib" }
